--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "card-generator",
+  "homepage": "https://suyash78.github.io/card-generator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,7 @@
     "@types/react-dom": "^17.0.0",
     "easy-peasy": "^5.0.3",
     "formik": "^2.2.9",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-forms": "https://github.com/mithyalabs/react-forms",
@@ -24,6 +26,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
